# 2025-ttei

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  run.sh
example/: main.cpp
include/ttie/: MatrixMultiplier.h  ttie.h
tests/: test_main.cpp
